# ParamGolf

./: --time=00:20:00  .env.template  .gitignore  CLAUDE.md  CLUSTER.md  DEV.md  Gates.py  Heuron.md  README.md  Smears.py  orchestrator.py  program.md  pyproject.toml  tested and result.md  train_gpt.py  train_gpt_exp.py  train_gpt_heuron_NOV.py  train_gpt_muon_sweeps.py  train_gpt_myrecord.py  train_gpt_pe_r.py  train_gpt_pe_r2.py  train_gpt_record_scheduled.py  train_gpt_skips.py  train_gpt_skips_agents.py
.claude/: settings.json
data/: cached_challenge_fineweb.py
heuron/: Log.md  Memory.md  Recap.md  Results.md  Scratch.md  launch_exp2.sh  recap.md  run_exp.sh  train_gpt_heron5_old.py  train_gpt_heron_2_4_old.py  train_gpt_heron_3_8_old.py  train_gpt_heron_old.py  train_gpt_heuron.py  train_gpt_heuron_4_1.py  train_gpt_heuron_4_2.py  train_gpt_heuron_4_3.py  train_gpt_heuron_5_1.py  train_gpt_heuron_5_10.py  train_gpt_heuron_5_11.py  train_gpt_heuron_5_12.py  train_gpt_heuron_5_13.py  train_gpt_heuron_5_14.py  train_gpt_heuron_5_15.py  train_gpt_heuron_5_16.py  train_gpt_heuron_5_17.py  train_gpt_heuron_5_18.py  train_gpt_heuron_5_19.py  train_gpt_heuron_5_2.py  train_gpt_heuron_5_20.py  train_gpt_heuron_5_21.py  train_gpt_heuron_5_22.py  train_gpt_heuron_5_23.py  train_gpt_heuron_5_24.py  train_gpt_heuron_5_25.py  train_gpt_heuron_5_26.py  train_gpt_heuron_5_27.py  train_gpt_heuron_5_28.py  train_gpt_heuron_5_29.py  train_gpt_heuron_5_3.py  train_gpt_heuron_5_30.py  (+7 more)
scripts/: _cancel_one.sh  _check_5_3.py  _check_5_7.py  _pyrun.py  train_16xA100.sh  train_5_2.sh  (+4 more)
(+171 files in other folders)
