[project]
name = "parameter-golf"
version = "0.1.0"
description = "OpenAI Parameter Golf Challenge"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "tqdm",
    "torch",
    "huggingface-hub",
    "kernels",
    "setuptools",
    "typing-extensions==4.15.0",
    "datasets",
    "tiktoken",
    "sentencepiece",
]
